--- a/employees.html
+++ b/employees.html
@@ -1,30 +1,9 @@
-<style>
-  #customers {
-    font-family: Arial, Helvetica, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-  }
-  
-  #customers td, #customers th {
-    border: 1px solid #ddd;
-    padding: 8px;
-  }
-  
-  #customers tr:nth-child(even){background-color: #f2f2f2;}
-  
-  #customers tr:hover {background-color: #ddd;}
-  
-  #customers th {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: left;
-    background-color: rgb(92, 59, 75);;
-    color: white;
-  }
-  </style>
-
 <h1>ALL EMPLOYEES</h1>
-<table border =1 id="customers">
+<head>
+   <link rel = "stylesheet" href = "http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+   <link rel="stylesheet" href="./styles.css">
+</head>
+<table border =1 class="customers">
     <tr>
       <th>Employee ID</th>
       <th>Employee name</th>
@@ -37,6 +16,14 @@
       <td>{{employee[1]}}</td>
       <td>{{employee[2]}}</td>
       <td>{{employee[3]}}</td>
+      <td>
+      <form method="POST" action="/rem_employee" onsubmit="return confirm('Are you sure you wanna delete??');">
+      <input type="hidden" value="{{employee[0]}}" name="e_id">
+      <button type="submit" class="btn btn large" value="{{employee[0]}}" name="e_id">
+      <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+      </button>
+      </form>
+      </td>
     </tr>
     {% endfor %}
 </table>
